bplm/sfdx-src/main/default/objects/Business_Process_Task__c/Business_Process_Task__c.object-meta.xml
<CustomObject>
    <label>Business Process Task</label>
    <nameField>
        <label>Business Process Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>