bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>What type of Task it is?</description>
    <inlineHelpText>What type of Task it is?</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Type</valueSetName>
    </valueSet>
</CustomField>