bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Assign_By__c.field-meta.xml
<CustomField>
    <fullName>Assign_By__c</fullName>
    <label>Assign By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer Name</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>