bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <description>Task assigned to</description>
    <inlineHelpText>Task assigned to</inlineHelpText>
    <label>Assign To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>