bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Assign_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Type__c</fullName>
    <description>Assign task to people, group or queue</description>
    <inlineHelpText>Assign task to people, group or queue</inlineHelpText>
    <label>Assign To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Assigned_To_Type</valueSetName>
    </valueSet>
</CustomField>