bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Buffer_Days__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Days__c</fullName>
    <description>Days buffer before this task start</description>
    <inlineHelpText>Days buffer before this task start</inlineHelpText>
    <label>Buffer Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>