bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it active?</description>
    <inlineHelpText>Is it active?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>