bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Manual_Start_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Manual_Start_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can this task manually started</description>
    <inlineHelpText>Can this task manually started</inlineHelpText>
    <label>Manual Start Enabled</label>
    <type>Checkbox</type>
</CustomField>