bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Task Priority</description>
    <inlineHelpText>Task Priority</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Process_Priority</valueSetName>
    </valueSet>
</CustomField>