bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>What is the subject of Task</description>
    <inlineHelpText>What is the subject of Task</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>