bplm/sfdx-src/main/default/objects/Business_Process_Task__c/fields/Task_Summary__c.field-meta.xml
<CustomField>
    <fullName>Task_Summary__c</fullName>
    <description>Task summary</description>
    <inlineHelpText>Task summary</inlineHelpText>
    <label>Task Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>